<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/result_id"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/text_bg"
            android:text="0"
            android:textAlignment="textEnd"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="match_parent"
            android:gravity="end" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClearEverything"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn_bg"
            android:text="CE" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn_bg"
            android:text="C" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn_bg"
            android:text="Del" />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn_bg"
            android:text="/" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="9"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="X" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="4" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="6" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="-" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="3" />

        <Button
            android:id="@+id/btnAddition"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="+" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSquareRoot"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="√" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="0" />

        <Button
            android:id="@+id/btnPeriod"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="." />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/round_btn_bg"
            android:text="=" />
    </LinearLayout>
</LinearLayout>